--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
     "react-native-google-places-autocomplete": "^1.3.6",
     "react-native-hide-with-keyboard": "^1.1.1",
     "react-native-maps": "^0.20.1",
-    "react-native-simple-radio-button": "^2.7.1",
+    "react-native-simple-radio-button": "2.7.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "1.5.9",
     "react-redux": "*",
     "redux": "*",
     "redux-promise-middleware": "*",
-    "redux-thunk": "*",
-    "react-native-simple-radio-button":"2.7.1"
+    "redux-thunk": "*"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
